<resources>
    <string name="app_name">Green Beans</string>

    <!-- Logo Text -->
    <string name="Logo">Green Beans</string>

    <!-- Menu -->
    <string name="search_title">Search</string>

    <!-- Application -->
    <string name="email_field_text">E-mail</string>
    <string name="verify_email_field_text">Verify E-mail</string>
    <string name="password_field_text">Password</string>
    <string name="verify_password_field_text">Verify Password</string>
    <string name="submit_button">Submit</string>


    <!-- Login Page -->
    <string name="title_bar_1">Login</string>
    <string name="scan_fingerprint">Scan Fingerprint</string>
    <string name="title_activity_menu_bar">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="forgot">Forgot Password</string>
    <!-- Create Account Page -->
    <string name="title_bar_2">Create Your Account!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <!-- Password Reset Page -->
    <string name="title_bar_3">Reset Login / Password!</string>
    <string name="password_text">Forgot your password?\n
    Enter your account email below: </string>

    <!-- Main Account Page -->
    <string name="search1">Search</string>
    <string name="acctOwner">Account Owner</string>
    <string name="gain">Gain/Loss</string>
    <string name="acctFirst">Chris</string>
    <string name="acctLast">Paul</string>
    <string name="profit"></string>
    <string name="acctFisrt" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>