<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageColor"
    tools:context=".PasswordResetFragment">

    <!-- Password Reset Page: Logo Bar -->
    <view
        android:id="@+id/logobar"
        class="androidx.appcompat.widget.AppCompatTextView"
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:background="@color/logoBackground"
        android:text="@string/Logo"
        android:textAlignment="center"
        android:textColor="@color/logoTextColor"
        android:textSize="51dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Password Reset Page: Title Bar -->
    <view
        android:id="@+id/titlebar"
        class="androidx.appcompat.widget.AppCompatTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:height="40sp"

        android:background="@drawable/text_entry_draw"
        android:text="@string/title_bar_3"
        android:textAlignment="center"
        android:textColor="@color/appTextColor"
        android:textSize="30dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logobar" />

    <!-- Password Reset Page: Password Reset Text -->
    <TextView
        android:id="@+id/passwordtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"

        android:text="@string/password_text"
        android:textAlignment="center"
        android:textColor="@color/appTextColor"
        android:textSize="25dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlebar" />

    <!-- Password Reset Page: Password Reset Text Field -->
    <EditText
        android:id="@+id/passwordreset"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="70dp"

        android:background="@drawable/text_entry_draw"
        android:padding="10dp"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="16dp"
        android:hint="@string/password_field_text"
        android:textColorHint="@color/appTextColor"
        android:textColor="@color/appTextColor"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordtext" />

    <!-- Password Reset Page: Reset Button -->
    <Button
        android:id="@+id/rgstrSubmitBtn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="255dp"

        android:background="@drawable/button_draw"
        android:text="@string/submit_button"
        android:textColor="@color/appTextColor"
        android:radius="30dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordreset" />

</androidx.constraintlayout.widget.ConstraintLayout>