<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageColor"
    tools:context=".CreateAccount">

    <!-- Create Account Page: Logo Bar -->
    <view
        android:id="@+id/logobar"
        class="androidx.appcompat.widget.AppCompatTextView"

        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:background="@color/logoBackground"
        android:text="@string/Logo"
        android:textAlignment="center"
        android:textColor="@color/logoTextColor"
        android:textSize="51dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Create Account Page: Title Bar -->
    <view
        android:id="@+id/titlebarcreateaccount"
        class="androidx.appcompat.widget.AppCompatTextView"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"

        android:background="@drawable/text_entry_draw"
        android:text="@string/title_bar_2"
        android:textAlignment="center"
        android:textColor="@color/appTextColor"
        android:textSize="30sp"

        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:height="40sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logobar" />

    <!-- Create Account Page: First Name Field -->
    <EditText
        android:id="@+id/firstname1"

        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"

        android:background="@drawable/text_entry_draw"
        android:paddingStart="50dp"
        android:hint="@string/first_name"
        android:textColorHint="@color/appTextColor"
        android:textColor="@color/appTextColor"

        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlebarcreateaccount" />

    <!-- Create Account Page: Last Name Field -->
    <EditText
        android:id="@+id/lastname1"

        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"

        android:drawablePadding="5dp"
        android:background="@drawable/text_entry_draw"
        android:paddingStart="50dp"
        android:hint="@string/last_name"
        android:textColorHint="@color/appTextColor"
        android:textColor="@color/appTextColor"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname1" />

    <!-- Create Account Page: E-mail Field -->
    <EditText
        android:id="@+id/email1"

        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"
        android:inputType="text"

        android:background="@drawable/text_entry_draw"
        android:drawablePadding="16dp"
        android:padding="10dp"
        android:drawableStart="@drawable/email_icon"
        android:hint="@string/email_field_text"
        android:textColorHint="@color/appTextColor"
        android:textColor="@color/appTextColor"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastname1" />

    <!-- Create Account Page: Verify E-mail Field -->
    <EditText
        android:id="@+id/verifyemail1"

        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"

        android:drawablePadding="5dp"
        android:background="@drawable/text_entry_draw"
        android:paddingStart="50dp"
        android:hint="@string/email_field_text"
        android:textColorHint="@color/appTextColor"
        android:textColor="@color/appTextColor"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email1" />

    <!-- Create Account Page: Password Field -->
    <EditText
        android:id="@+id/password1"

        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"

        android:background="@drawable/text_entry_draw"
        android:drawablePadding="16dp"
        android:padding="10dp"
        android:drawableStart="@drawable/password_icon"
        android:hint="@string/password_field_text"
        android:textColorHint="@color/appTextColor"
        android:textColor="@color/appTextColor"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyemail1" />

    <!-- Create Account Page: Verify Password Field -->
    <EditText
        android:id="@+id/verifypassword1"

        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"

        android:drawablePadding="5dp"
        android:background="@drawable/text_entry_draw"
        android:paddingStart="50dp"
        android:hint="@string/password_field_text"
        android:textColorHint="@color/appTextColor"
        android:textColor="@color/appTextColor"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1" />

    <!-- Create Account Page: Submit Button -->
    <Button
        android:id="@+id/rgstrSubmitBtn"

        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"

        android:background="@drawable/button_draw"
        android:text="@string/submit_button"
        android:textColor="@color/appTextColor"
        android:radius="30dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifypassword1" />

</androidx.constraintlayout.widget.ConstraintLayout>