<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageColor"
    tools:context=".LoginFragment">


    <!-- Login Page: Logo Bar -->
    <view
        android:id="@+id/logobar"
        class="androidx.appcompat.widget.AppCompatTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/logoBackground"
        android:text="@string/Logo"
        android:textAlignment="center"
        android:textColor="@color/logoTextColor"
        android:textSize="51sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal" />

    <!-- Login Page: Title Bar -->
    <view
        android:id="@+id/titlebar"
        class="androidx.appcompat.widget.AppCompatTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:height="40sp"

        android:background="@drawable/text_entry_draw"
        android:text="@string/title_bar_1"
        android:textAlignment="center"
        android:textColor="@color/appTextColor"
        android:textSize="30sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logobar"
        android:gravity="center_horizontal" />

    <!-- Login Page: Email Field -->
    <EditText
        android:id="@+id/emailfield"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="80dp"

        android:drawablePadding="16dp"
        android:background="@drawable/text_entry_draw"
        android:padding="10dp"
        android:drawableStart="@drawable/email_icon"
        android:hint="@string/email_field_text"
        android:textColorHint="@color/appTextColor"
        android:textColor="@color/appTextColor"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlebar"
        android:drawableLeft="@drawable/email_icon" />

    <!-- Login Page: Password Field -->
    <EditText
        android:id="@+id/passwordfield"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"

        android:drawablePadding="16dp"
        android:background="@drawable/text_entry_draw"
        android:padding="10dp"
        android:drawableStart="@drawable/password_icon"
        android:hint="@string/password_field_text"
        android:textColorHint="@color/appTextColor"
        android:textColor="@color/appTextColor"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailfield"
        android:drawableLeft="@drawable/password_icon" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="174dp"
        android:layout_height="49dp"
        android:layout_marginTop="104dp"
        android:text="Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordfield" />

    <Button
        android:id="@+id/rgstrBtn"
        android:layout_width="174dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:text="Create Account"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <Button
        android:id="@+id/forgotBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:capitalize="none"
        android:text="@string/forgot"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/rgstrBtn"
        app:layout_constraintStart_toStartOf="@+id/rgstrBtn"
        app:layout_constraintTop_toBottomOf="@+id/rgstrBtn" />

    <!-- Login Page: Scan Fingerprint Text -->

    <!-- Login Page: Scan Fingerprint Button -->

</androidx.constraintlayout.widget.ConstraintLayout>